# exness-data-preprocess

./: .cz.toml  .gitignore  .lint-relative-paths-results.txt  .lychee-results.json  .lychee-results.txt  .mise.toml  .pre-commit-config.yaml  .releaserc.yml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  GITHUB_PYPI_SETUP.md  Makefile  PYDANTIC_REFACTORING_PLAN.md  PYDANTIC_REFACTORING_STATUS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_SHORT.md  cliff.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  publish.yml
docs/: CLICKHOUSE_USER_GUIDE.md  DATABASE_SCHEMA.md  EXNESS_DATA_SOURCES.md  MODULE_ARCHITECTURE.md  PHASE4_DRY_RUN_CONFIG_PLAN.yaml  PRIORITY3_CLEANUP_PLAN.yaml  README.md  REPOSITORY_REFACTORING_PLAN.yaml  RESEARCH_PATTERNS.md  TRADING_HOURS_RESEARCH.md  UNIFIED_DUCKDB_PLAN_v2.md  implementation-plan.yaml  planning-index.yaml
docs/adr/: 2025-12-09-codebase-pruning.md  2025-12-09-exness-clickhouse-migration.md  2025-12-10-clickhouse-e2e-validation-pipeline.md  2025-12-10-clickhouse-pydantic-config.md  2025-12-11-duckdb-removal-clickhouse.md
docs/adr/diagrams/: 2025-12-10-clickhouse-pydantic-config-after.dot  2025-12-10-clickhouse-pydantic-config-arch.dot  2025-12-10-clickhouse-pydantic-config-before.dot
docs/archive/: CLAUDE_MD_AUDIT_2025-10-16_PASS2.md  DOCUMENTATION_AUDIT_2025-10-15.md  DOCUMENTATION_BEST_PRACTICES_LINE_COUNTS.md  E2E_TESTING_PLAN_v1.0.0.md  FUNCTIONALITY_VALIDATION_REPORT_2025-10-15.md  GAP_DETECTION_COMPARISON.md  GAP_DETECTION_SQL_APPROACH.md  PHASE7_v1.5.0_REFACTORING_PLAN.md  PYDANTIC_REFACTORING_PLAN_v0.2.0_COMPLETE.md  PYDANTIC_REFACTORING_STATUS_v0.2.0_COMPLETE.md  RESEARCH_PATTERNS_CANONICALIZATION_2025-10-17.md  SCHEMA_v1.6.0_MIGRATION_GUIDE.md  SESSION_2025-10-15_SUMMARY.md  UNIFIED_DUCKDB_PLAN_v1.0.0_LEGACY.md
docs/design/2025-12-09-codebase-pruning/: spec.md
docs/design/2025-12-09-exness-clickhouse-migration/: spec.md
docs/design/2025-12-10-clickhouse-e2e-validation-pipeline/: spec.md
docs/optimization/: OPTIMIZATION_OPPORTUNITIES_2025-10-18.md
docs/phases/: PHASE2_SESSION_VECTORIZATION_PLAN.yaml  PHASE3_SQL_GAP_DETECTION_PLAN.yaml
docs/plans/: CLAUDE_MD_AUDIT_2025-10-16.md  CLAUDE_MD_AUDIT_2025-10-16_PASS2.md  CLAUDE_MD_VERIFICATION_CHECKLIST_2025-10-16.md  CLAUDE_MD_VERIFICATION_FINDINGS_2025-10-16.md  DOCUMENTATION_AUDIT_2025-10-15.md  DOCUMENTATION_AUDIT_PASS2_2025-10-15.md  DOCUMENTATION_BEST_PRACTICES_LINE_COUNTS.md  EXCHANGE_SESSION_AUDIT_2025-10-17.md  FUNCTIONALITY_VALIDATION_REPORT_2025-10-15.md  FUNCTIONALITY_VALIDATION_REPORT_2025-10-16.md  PHASE7_v1.5.0_REFACTORING_PLAN.md  PHASE7_v1.6.0_REFACTORING_PROGRESS.md  REFACTORING_CHECKLIST.md  RESEARCH_PATTERNS_CANONICALIZATION_2025-10-17.md  SCHEMA_v1.6.0_AUDIT_FINDINGS.md  SCHEMA_v1.6.0_MIGRATION_GUIDE.md  SESSION_2025-10-15_SUMMARY.md
docs/releases/: RELEASE_NOTES.md  RELEASE_NOTES_SHORT.md
docs/research/: GAP_DETECTION_COMPARISON.md  GAP_DETECTION_SQL_APPROACH.md  HYBRID_SESSION_DETECTION_ANALYSIS.md  gap_detection_implementation_example.py
docs/research/compression-benchmarks/: README.md  (+3 more)
docs/setup/: GITHUB_PYPI_SETUP.md
docs/validation/: ARCHITECTURE_AUDIT_2025-10-17.md  ARCHITECTURE_EFFICIENCY_AUDIT_2025-10-18.md  DOCUMENTATION_SURVEY_v1.7.0.md  E2E_VALIDATION_RESULTS_v1.6.0.md  SPIKE_TEST_RESULTS_PHASE1_2025-10-18.md  SPIKE_TEST_RESULTS_PHASE2_2025-10-18.md  WEEKEND_GAP_VALIDATION_SUMMARY.md  WORKSPACE_SURVEY_2025-10-17.md
examples/: add_schema_comments.py  basic_usage.py  batch_processing.py
scripts/: generate_dbeaver_config.py  migrate_duckdb_to_clickhouse.py  validate_migration_data.py
src/exness_data_preprocess/: __init__.py  api.py  cli.py  clickhouse_base.py  clickhouse_client.py  clickhouse_gap_detector.py  clickhouse_manager.py  clickhouse_ohlc_generator.py  clickhouse_query_engine.py  config.py  database_manager.py  downloader.py  exchanges.py  gap_detector.py  models.py  ohlc_generator.py  processor.py  query_engine.py  schema.py  session_detector.py  tick_loader.py
tests/: PYDANTIC_TEST_STRATEGY.md  README.md  __init__.py  conftest.py  test_basic.py  test_database_bootstrap_order.py  test_functional_regression.py  test_models.py  test_processor_pydantic.py  test_types.py
tests/archive/: E2E_TESTING_PLAN_v1.0.0.md
(+36 files in other folders)
